[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/chango-60.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/UI.gd" type="Script" id=2]
[ext_resource path="res://Sprites/camera_icon-removebg-preview.png" type="Texture" id=3]
[ext_resource path="res://Fonts/chango-40.tres" type="DynamicFont" id=4]

[node name="Node2D" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 576.0
margin_bottom = 1048.0
color = Color( 0, 0.156863, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Back" type="Button" parent="UI"]
margin_left = 15.0
margin_top = 20.0
margin_right = 95.0
margin_bottom = 100.0
focus_mode = 0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "<"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="object label" type="Label" parent="UI"]
margin_left = 138.0
margin_top = 20.0
margin_right = 438.0
margin_bottom = 100.0
rect_min_size = Vector2( 300, 80 )
custom_fonts/font = ExtResource( 4 )
text = "Object"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="UI"]
margin_left = 461.0
margin_top = 20.0
margin_right = 563.0
margin_bottom = 116.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="clock_output" type="LineEdit" parent="UI"]
margin_left = 50.0
margin_top = 951.0
margin_right = 526.0
margin_bottom = 1024.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_uneditable = Color( 1, 1, 1, 1 )
align = 1
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="UI/Back" to="UI" method="_on_Back_pressed"]
[connection signal="pressed" from="UI/Button" to="UI" method="_on_Button_pressed"]
